--- a/src/less/posts/languages/markup.less
+++ b/src/less/posts/languages/markup.less
@@ -9,7 +9,7 @@
   .language-jinja,
   .language-xml,
   .css,
-  .http.
+  .http,
   .xml {
     color: #c5cddc;
     background: #282c34;
@@ -25,9 +25,6 @@
     .hljs-keyword {
       color: #c678dd;
     }
-
-
-
 
 
     .hljs-deletion,
