--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -21,7 +21,8 @@
 		margin-left: calc(~"-50vw + 50%") !important;
 		margin-right: calc(~"-50vw + 50%") !important;
 		margin-top: 0;
-		padding: 30px;
+		padding: 30px 0;
+		width: 100%;
 	}
 
 	.post-title {
