--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -9,7 +9,7 @@
         <img src="{{@site.logo}}" alt="{{@site.title}}" data-rjs="2">
       </a>
   	{{else}}
-  		<a class="branding" href="{{@site.url}}">{{@site.title}}</a>
+  		<a class="branding" href="{{@site.url}}" name="{{@site.title}}">{{@site.title}}</a>
   	{{/if}}
   </div>
   <nav class="navigation">
