--- a/partials/widget-sidebartag.hbs
+++ b/partials/widget-sidebartag.hbs
@@ -4,7 +4,7 @@
 	<div class="tag-cloud tag">
 		{{#get "tags" limit="all" filter="slug:-[roundup,machine-learning,django,graph-databases,science-news,cybersecurity,blockchain,aws-api,kanban,codesnippetcorner,statistics,tableau-hacks]" include="count.posts" order="count.posts DESC" }}
 			{{#foreach tags}}
-				<a href="{{url}}" class="">{{name}}</a>
+				<a href="{{url}}" name="{{name}}">{{name}}</a>
 			{{/foreach}}
 		{{/get}}
 	</div>
