--- a/src/less/posts/article-preview.less
+++ b/src/less/posts/article-preview.less
@@ -43,6 +43,7 @@
     height: 140px;
     background-size: cover;
     background-position: center;
+    border-bottom: 1px solid #e9ebef;
     @media(max-width: 600px) {
       width: 35%;
       height: 100%;
