--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -10,6 +10,7 @@
 	align-items: center;
 	height: fit-content;
 	margin-top: 50px;
+	margin-bottom: 40px;
 	@media(max-width: 800px) {
 		display: block;
 		height: fit-content;
