--- a/partials/cover-author.hbs
+++ b/partials/cover-author.hbs
@@ -7,18 +7,18 @@
 			{{name}}
 		</h3>
 		<div class="meta-info">
-			<span class="post-count"><i class="fal fa-pencil"></i>{{plural posts.total empty='No posts' singular='% post' plural='% posts'}}</span>
+			<span class="post-count"><i class="fal fa-pencil"></i>{{#get "posts" include="count.posts"}}{{plural count.posts empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}{{/get}}</span>
 			{{#if location}}
 				<span class="loaction"><i class="fal fa-map-marker-alt"></i>{{location}}</span>
 			{{/if}}
 			{{#if website}}
-				<span class="website"><a href="{{website}}" targer="_BLANK"><i class="fal fa-globe"></i> {{t "Website"}}</a></span>
+				<span class="website"><a href="{{website}}" target="_BLANK"><i class="fal fa-globe"></i> {{t "Website"}}</a></span>
 			{{/if}}
 			{{#if twitter}}
-				<span class="twitter"><a href="{{twitter_url}}"><i class="fab fa-twitter"></i> {{twitter}}</a></span>
+				<span class="twitter"><a href="{{twitter_url}}" target="_BLANK"><i class="fab fa-twitter"></i> {{twitter}}</a></span>
 			{{/if}}
 			{{#if facebook}}
-				<span class="facebook"><a href="{{facebook_url}}"><i class="fa fa-facebook"></i></a></span>
+				<span class="facebook"><a href="{{facebook_url}}" target="_BLANK"><i class="fa fa-facebook"></i></a></span>
 			{{/if}}
 		</div>
 		{{#if bio}}
@@ -26,7 +26,7 @@
 		{{/if}}
 	</div>
 
-	<script>
+	<!--<script>
 		$(document).ready(function() {
 			$.get(
 				ghost.url.api('posts', {
@@ -38,5 +38,5 @@
 				$('.post-count').append(' Posts');
 			});
 		});
-	</script>
+	</script>-->
 {{/author}}
