added default code block styles

--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -9,7 +9,8 @@
   .shell,
   .output,
   .endpoint,
-  .shell {
+  .shell,
+  .hljs {
     background: @nord0;
     color: white;
     font-weight: normal;
@@ -35,7 +36,7 @@
     .hljs-built_in,
     .hljs-section,
     .hljs-selector-tag {
-      color: @nord12;
+      color: #cbbdff;
     }
 
     .hljs-keyword {
