--- a/src/less/posts/languages/sql.less
+++ b/src/less/posts/languages/sql.less
@@ -10,7 +10,7 @@
     }
 
     .string {
-      color: #5C9AF4;
+      color: #a0b8ff;
     }
 
     .hljs span::-moz-selection,
@@ -38,7 +38,7 @@
     .hljs-literal,
     .hljs-number,
     .hljs-symbol {
-      color: #cebde3;
+      color: #4ac0fa;
     }
     /*color: fg_green*/
     .hljs-addition,
@@ -80,7 +80,7 @@
     .hljs-section,
     .hljs-selector-class,
     .hljs-type {
-      color: #ddbd73;
+      color: #ffe3a2;
     }
 
     .hljs-emphasis {
