--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -61,7 +61,6 @@ header {
 
 		img {
 			width: auto;
-			max-height: 650px;
 			margin: 0 auto;
 			display: block;
 			max-width: 100%;
@@ -172,7 +171,7 @@ header {
 	}
 
 	h2 {
-	  margin: 40px 0;
+	  margin: 40px 0 20px;
     color: #555560;
 		line-height: 1.3;
 		font-family: 'ProductSans-Regular';
@@ -182,7 +181,6 @@ header {
 		width: 100%;
 		@media(max-width: 800px) {
 			font-size: 1.9em;
-			padding-bottom: 9px;
 		}
 		@media(max-width: 600px) {
 			font-size: 1.65em;
@@ -193,7 +191,6 @@ header {
 			text-align: center;
 			font-weight: 500!important;
 			border: none;
-			padding: 0 12px;
 			margin-bottom: 20px;
 		}
 	}
