fixed h3 post margins

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -199,7 +199,7 @@ header {
 		font-size: 1.3em;
 		line-height: 1.2;
 		color: #555560;
-		margin: 40px 0;
+		margin: 40px 0 20px;
 		font-family: 'ProductSans-Regular';
 		@media(max-width: 800px) {
 			font-size: 1.3em;
