--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -25,7 +25,7 @@
     <div class="post-permalink">
       <div class="meta">
         {{#primary_tag}}
-            <a href="{{url}}"><span class="tags meta-item {{slug}}"><i class="fas fa-tags"></i> <span>{{name}}</span></span></a>
+            <a href="{{url}}" class="tags meta-item {{slug}}"><i class="fas fa-tags"></i> <span>{{name}}</span></a>
         {{/primary_tag}}
         {{#primary_author}}
         {{primary_author.bio}}
