--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -329,3 +329,9 @@ header {
     }
   }
 }
+/* Add exception for homepage margin */
+.home-template header {
+  @media(max-width: 1000px) {
+    margin-bottom: 25px;
+  }
+}
