--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -9,6 +9,7 @@
 	transition: all 0.3s ease-out;
 	@media(max-width: 950px) {
 		 padding: 15px;
+		 margin-bottom: 20px;
 	}
 
 	@media(max-width:800px) {
@@ -115,6 +116,11 @@
 			margin: 0 0 10px;
 			font-weight: 900;
 			font-family: 'ProductSans-Bold', 'TTNorms-Medium';
+
+			@media(max-width: 950px) {
+				 font-size: 1.8em;
+			}
+
 			@media(max-width: 600px) {
 				font-size: 1.4em;
 				margin: 5px 0 10px;
@@ -195,7 +201,7 @@
 		font-family: 'TTNorms-Regular', sans-serif;
 		width: 100%;
 		justify-content: space-between;
-		max-width: 440px;
+		max-width: 420px;
 		@media(max-width:1000px) {
 			justify-content: left;
 		}
@@ -259,7 +265,6 @@
 			align-items: center;
 			font-size: 16px;
 			padding: 0;
-			margin: auto 20px auto 0;
 			@media(max-width: 1000px) {
 				margin: auto 40px auto 0 !important;
 			}
