--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -59,6 +59,7 @@
 		@media(max-width: 950px) {
 			 margin-right: 20px !important;
 			 margin-bottom: 20px !important;
+			 padding: 15px;
 		}
 
 		&:first-of-type {
@@ -363,6 +364,10 @@
 			display: flex;
 			align-items: center;
 
+			@media(max-width: 950px) {
+				 font-size: 14px;
+			}
+
 			i,
 			svg {
 				width: 24px;
@@ -424,7 +429,6 @@
 			@media(max-width: 950px) {
 				padding: 5px 0;
 				background: 0;
-				margin-left: 5px;
 			}
 		}
 
