--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -96,8 +96,12 @@
 		display: inline-block;
 		line-height: 1;
 		display: flex;
-		justify-content: space-between;
+		justify-content: center;
 		max-width: 70%;
+
+		.page {
+		 margin: 0 10px;
+		}
 
 		@media(max-width: 600px) {
 			 max-width: 65%;
