--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -5,7 +5,7 @@
 @secondary-color: #30b1a7;				// secondary theme color
 @hover-color: #40cebb;
 @button-color: #33abba;
-@button-hover: linear-gradient(135deg,#53c2f7,#1e6792);
+@button-hover: #30b1a7;
 @h1-color: #152952;
 @header-color: #276890;
 @bg-color: #ecf1f9;					// Background color / secndary theme color
