footer styles on mobile

--- a/custom-resources.hbs
+++ b/custom-resources.hbs
@@ -34,12 +34,12 @@
 <script>
   $(document).ready(function() {
     function populatePython(pythons, status) {
-      $('#resources-table thead').append('<tr><th></th><th>summary</th><th>description</th><th>issuetype</th></tr>');
+      $('#resources-table thead').append('<tr><th class="icon"></th><th>summary</th><th>description</th><th>issuetype</th></tr>');
       for (var i = 0; i < pythons.length; i++) {
-        $('#resources-table tbody').append('<tr class="' + pythons[i].issuetype + '"> \n ' +
+        $('#resources-table tbody').append('<tr class="' + pythons[i].issuetype + ' icon"> \n ' +
           '<td class="icon"><img class="issuetype_icon" src="' + pythons[i].issuetype_icon + '" alt="' + pythons[i].issuetype + '"></td> \n' +
           '<td class="summary">' + pythons[i].summary + '</td> \n' +
-          '<td><a href="' + pythons[i].description + '">' + pythons[i].description + '</a></td> \n' +
+          '<td class="description"><a href="' + pythons[i].description + '">' + pythons[i].description + '</a></td> \n' +
           '<td class="issuetype-name">' + pythons[i].issuetype + '</td> \n' +
           '</tr>');
       }
