--- a/partials/widget-authors.hbs
+++ b/partials/widget-authors.hbs
@@ -1,6 +1,6 @@
 <!-- start authors widget -->
 <div class="widget contributors">
-	<h4 class="footer-title">Contributors</h4>
+	<h4 class="footer-title">Authors</h4>
 	<ul>
 		{{#get "authors" include="count.posts"}}
 			{{#foreach authors}}
