--- a/src/less/pages/resources.less
+++ b/src/less/pages/resources.less
@@ -18,6 +18,11 @@
 
   #resources-table {
     width:100%;
+
+    .icon {
+      max-width: 5px;
+    }
+
     td {
       white-space: nowrap;
       text-overflow: ellipsis;
@@ -30,6 +35,8 @@
         td:first-of-type {
           text-align: center;
         }
+
+
 
         .issuetype_icon {
           text-align: center !important;
