--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -20,6 +20,7 @@
 		text-align: left;
 		text-transform: uppercase;
 		letter-spacing: 2px;
+		line-height: 1;
 		@media(max-width: 800px) {
 			margin: 10px 0 10px !important;
 		}
@@ -30,7 +31,7 @@
 	@media(max-width: 600px) {
 		margin-top: 10px;
 		display: block;
-		padding: 30px 20px 25px;
+		padding: 40px 65px;
 	}
 
 	.footer-container {
@@ -38,8 +39,12 @@
 		margin: auto;
 		display: flex;
 		justify-content: space-between;
-		@media(max-width: 800px) {
-			flex-direction: column;
+
+		@media(max-width: 600px) {
+			margin: auto;
+			justify-content: space-between;
+			flex-direction: row;
+			flex-wrap: wrap;
 		}
 	}
 
@@ -74,18 +79,17 @@
 		}
 
 		@media(max-width: 800px) {
-			padding: 0 20px;
 			width: -webkit-fill-available;
 			margin: 10px 0 30px;
-			width: 100%;
+			width: 22%;
 
 			&:last-child {
 				margin-bottom: 0;
 			}
 		}
 		@media(max-width: 600px) {
-			width: auto !important;
-			padding: 0 20px !important;
+			max-width: none;
+			padding: 0;
 		}
 	}
 }
@@ -94,7 +98,19 @@
 ====================================================*/
 .widget.about {
 	min-width: 24%;
-	width: 24% !important;
+	width: 24%;
+
+	@media(max-width: 800px) {
+		width: 35% !important;
+	}
+
+	@media(max-width: 600px) {
+		width: -webkit-fill-available !important;
+		width: -moz-fill-available !important;
+		border-bottom: 1px solid rgba(255, 255, 255, 0.16862745098039217);
+		padding-bottom: 20px !important;
+	  margin: 10px 0 20px;
+	}
 
 	.logo {
 		width: 185px;
@@ -121,6 +137,10 @@
 		line-height: 1.6;
 		margin: 15px 0 25px;
 		text-align: justify;
+
+		@media(max-width: 600px) {
+			 margin: 15px 0;
+		}
 	}
 
 	.social-btns {
@@ -131,6 +151,10 @@
 		i {
 			font-size: 20px;
 			mix-blend-mode: hard-light;
+
+			@media(max-width: 600px) {
+				 font-size: 30px;
+			}
 		}
 
 		.facebook i {
@@ -187,19 +211,19 @@
 			contributors
 =====================================================*/
 	.widget.contributors {
-
 		.footer-title {
 			margin: 0;
 		}
 		@media(max-width: 800px) {
-			margin-bottom: 10px;
-			max-width: none;
-			min-width: -webkit-fill-available !important;
-			min-width: -moz-available !important;
+			display: none;
 		}
+	}
+
+	.widget.links,
+	.widget.tags {
 		@media(max-width: 600px) {
-			margin: 20px auto 10px;
+			margin: 10px 0 0;
+		  width: 40%;
+			min-width: unset;
 		}
-
-
 	}
