--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -50,7 +50,7 @@
 
 	.widget {
 		padding: 2px 0;
-		width: 18%;
+		width: 15%;
 		margin: 0;
 
 		ul {
@@ -211,6 +211,7 @@
 			contributors
 =====================================================*/
 	.widget.contributors {
+		 margin-top: 10px;
 		.footer-title {
 			margin: 0;
 		}
@@ -221,9 +222,20 @@
 
 	.widget.links,
 	.widget.tags {
+		margin-top: 10px;
 		@media(max-width: 600px) {
 			margin: 10px 0 0;
 		  width: 40%;
 			min-width: unset;
 		}
+	}
+
+	.copyright {
+		width: 100%;
+		background: #0c1626;
+		text-align: center;
+		color: white;
+		font-size: 0.8em;
+		font-family: 'TTNormsPro-Light';
+		padding: 10px;
 	}
