--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -4,8 +4,9 @@
 @theme-color: #0db0e2;        // theme color
 @secondary-color: #30b1a7;				// secondary theme color
 @hover-color: #40cebb;
-@button-color: #33abba;
+@button-color: #1f90b7;
 @button-hover: #30b1a7;
+@button-shadow: #1d6e8e;
 @h1-color: #152952;
 @header-color: #276890;
 @bg-color: #ecf1f9;					// Background color / secndary theme color
