--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -113,7 +113,7 @@
   justify-content: left !important;
 
   .name {
-    font-family: 'TTNorms-Medium';
+    font-family: 'TTNormsPro-Medium';
     color: #5D6178;
     font-size: .9em;
     font-weight: 600;
