--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -43,7 +43,7 @@
     text-rendering: auto;
     text-shadow: -2px 2px 1px rgba(0, 9, 46, 0.6) !important;
     content: "Code Snippet";
-    background: rgba(36, 40, 66, .6);
+    background: rgba(40, 48, 104, 0.6);
     mix-blend-mode: color-dodge;
     @media(max-width: 600px) {
       width: -webkit-fill-available;
