--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,7 +1,7 @@
 <header>
   <div class="banner">
     <div class="search form-group">
-    	<i class="far fa-search"></i><input id="my-custom-input" class="icon" placeholder="Search all posts" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search all posts'" label="search">
+    	<i class="far fa-search"></i><input id="my-custom-input" class="icon" placeholder="Search all posts" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search all posts'">
 		</div>
     <div id="my-custom-results"></div>
     {{#if @site.logo}}
@@ -9,7 +9,7 @@
         <img src="{{@site.logo}}" alt="{{@site.title}}" data-rjs="2">
       </a>
   	{{else}}
-  		<a class="branding" href="{{@site.url}}" name="{{@site.title}}">{{@site.title}}</a>
+  		<a class="branding" href="{{@site.url}}">{{@site.title}}</a>
   	{{/if}}
   </div>
   <nav class="navigation">
