--- a/partials/widget-about.hbs
+++ b/partials/widget-about.hbs
@@ -1,19 +1,19 @@
 <!-- start about widget -->
 <div class="widget about">
   {{#if @site.logo}}
-    <a class="logo" name="logo" href="{{@site.url}}">
+    <a class="logo"href="{{@site.url}}">
       <img src="{{@site.logo}}" alt="{{@site.title}}" data-rjs="2">
     </a>
   {{/if}}
   <p class="description">{{@site.description}}</p>
   <div class="social-btns">
-    <a class="btn medium" name="medium" href="https://hackingandslacking.com"><i class="fab fa-medium"></i></a>
-    <a class="btn facebook" name="facebook" href="{{@site.title}}"><i class="fab fa-facebook-f"></i></a>
-    <a class="btn twitter" name="twitter" href="{{@site.twitter}}"><i class="fab fa-twitter"></i></a>
-    <a class="btn tumblr" name="tumblr" href="https://hackersandslackers.tumblr.com/"><i class="fab fa-tumblr"></i></a>
-    <a class="btn google" name="google" href="https://plus.google.com/communities/106724509785464667119"><i class="fab fa-google"></i></a>
-    <a class="btn github" name="github" href="https://github.com/hackersandslackers"><i class="fab fa-github"></i></a>
-    <a class="btn rss" name="rss" href="{{@site.url}}/rss/"><i class="fas fa-rss"></i></a>
+    <a class="btn medium" href="https://hackingandslacking.com"><i class="fab fa-medium"></i></a>
+    <a class="btn facebook" href="{{@site.title}}"><i class="fab fa-facebook-f"></i></a>
+    <a class="btn twitter" href="{{@site.twitter}}"><i class="fab fa-twitter"></i></a>
+    <a class="btn tumblr" href="https://hackersandslackers.tumblr.com/"><i class="fab fa-tumblr"></i></a>
+    <a class="btn google" href="https://plus.google.com/communities/106724509785464667119"><i class="fab fa-google"></i></a>
+    <a class="btn github" href="https://github.com/hackersandslackers"><i class="fab fa-github"></i></a>
+    <a class="btn rss" href="{{@site.url}}/rss/"><i class="fas fa-rss"></i></a>
   </div>
 </div>
 <!-- end about widget -->
