--- a/partials/widget-authorrss.hbs
+++ b/partials/widget-authorrss.hbs
@@ -1,6 +1,6 @@
 <!-- start feedwind code -->
 <div class="widget" style="0">
     <h4 class="title">Personal RSS</h4>
-    <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="78860/"></script>
+    <script src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="78860/"></script>
 </div>
 <!-- end feedwind code -->
