--- a/partials/widget-footertags.hbs
+++ b/partials/widget-footertags.hbs
@@ -4,9 +4,7 @@
 	<ul>
     {{#get "tags" filter="slug:-[roundup,excel,machine-learning,graph-databases,science-news,cybersecurity,blockchain,aws-api,kanban,codesnippetcorner,statistics,tableau-hacks]" limit="6" include="count.posts" order="count.posts DESC" }}
 			{{#foreach tags}}
-					<li>
-						<a href="{{url}}">{{name}}</a>
-					</li>
+					<li><a href="{{url}}">{{name}}</a></li>
 			{{/foreach}}
 		{{/get}}
 		</ul>
