--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,5 +1,5 @@
 <ul class="menu">
 	{{#foreach navigation}}
-		<a href="{{url absolute="true"}}"><li class="nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation">{{label}}</li></a>
+	<li class="nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation"><a href="{{url absolute="true"}}">{{label}}</a></li>
 	{{/foreach}}
 </ul>
