--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -1,4 +1,4 @@
-<article class="post-preview">
+f<article class="post-preview">
   {{#if featured}}
     <div class="featured">
       <i class="far fa-star"></i>
@@ -6,7 +6,7 @@
   {{/if}}
 
   {{#if feature_image}}
-    <a href="{{url}}" alt="{{{title}}}" class="featured-media">
+    <a href="{{url}}" class="featured-media">
       <picture>
         <source media="(min-width: 1200px)" data-srcset="{{img_url feature_image size="xl"}} 1x, {{img_url feature_image size="xl@2x"}} 2x">
         <source media="(min-width: 800px)" data-srcset="{{img_url feature_image size="l"}} 1x, {{img_url feature_image size="l@2x"}} 2x">
