--- a/partials/widget-authortwitter.hbs
+++ b/partials/widget-authortwitter.hbs
@@ -7,6 +7,6 @@
 </div>-->
 <div class="widget author-twitter">
   <h4 class="title">Twitter</h4>
-  <iframe src="https://feed.mikle.com/widget/v2/78832/" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
+  <iframe src="https://feed.mikle.com/widget/v2/78832/" width="100%" class="fw-iframe" frameborder="0"></iframe>
 </div>
 <!-- end twitter widget -->
