--- a/partials/author-sidebar.hbs
+++ b/partials/author-sidebar.hbs
@@ -6,7 +6,7 @@
 	{{#has slug="todd"}}
 	<div class="widget author-twitter">
 		<h4 class="title">Twitter</h4>
-		<iframe src="https://feed.mikle.com/widget/v2/103096/" height="740px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
+		<iframe src="https://feed.mikle.com/widget/v2/103096/" height="740px" width="100%" class="fw-iframe" frameborder="0"></iframe>
 	</div>
 	{{else}}
 		{{> widget-authortwitter}}
