defer unused styles

--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -1,4 +1,4 @@
-f<article class="post-preview">
+<article class="post-preview">
   {{#if featured}}
     <div class="featured">
       <i class="far fa-star"></i>
