--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -4,7 +4,7 @@
 	footer
 ====================================================*/
 .main-footer {
-	background: #14243e !important;
+	background: #0d1a2f !important;
 	background-size: cover;
 	padding: 35px 8%;
 	color: #fff;
@@ -31,7 +31,7 @@
 	@media(max-width: 600px) {
 		margin-top: 10px;
 		display: block;
-		padding: 40px 65px;
+		padding: 40px;
 	}
 
 	.footer-container {
