--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -5,13 +5,30 @@
 <!--
 <script data-search-pseudo-elements defer src="https://pro.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-I3Hhe9TkmlsxzooTtbRzdeLbmkFQE9DVzX/19uTZfHk1zn/uWUyk+a+GyrHyseSq" crossorigin="anonymous"></script>
 -->
-<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-6jHF7Z3XI3fF4XZixAuSu0gGKrXwoX/w3uFPxC56OtjChio7wtTGJWRW53Nhx6Ev" crossorigin="anonymous">
+<noscript id="deferred-styles">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-6jHF7Z3XI3fF4XZixAuSu0gGKrXwoX/w3uFPxC56OtjChio7wtTGJWRW53Nhx6Ev" crossorigin="anonymous">
+  <script src="{{asset "js/includes/ghost-search.min.js"}}"></script>
+</noscript>
 <script>
 var lazyLoadInstance = new LazyLoad({
     elements_selector: ".lazy"
     // ... more custom settings?
 });
 </script>
+<script src="{{asset "/js/includes/retina.min.js"}}"></script>
+<script>
+     var loadDeferredStyles = function() {
+       var addStylesNode = document.getElementById("deferred-styles");
+       var replacement = document.createElement("div");
+       replacement.innerHTML = addStylesNode.textContent;
+       document.body.appendChild(replacement)
+       addStylesNode.parentElement.removeChild(addStylesNode);
+     };
+     var raf = window.requestAnimationFrame || window.mozRequestAnimationFrame ||
+         window.webkitRequestAnimationFrame || window.msRequestAnimationFrame;
+     if (raf) raf(function() { window.setTimeout(loadDeferredStyles, 0); });
+     else window.addEventListener('load', loadDeferredStyles);
+   </script>
 {{#is "post"}}
   <script async src="{{asset "/dist/posts.js"}}"></script>
 {{/is}}
@@ -22,6 +39,5 @@ var lazyLoadInstance = new LazyLoad({
     <script src="{{asset "js/includes/gh-profile-card.min.js"}}"></script>
     <script async src="{{asset "dist/author.js"}}"></script>
 {{/is}}
-<script src="{{asset "js/includes/ghost-search.min.js"}}"></script>
-<script src="{{asset "/js/includes/retina.min.js"}}"></script>
+
 <!-- End Scripts -->
