--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -1,13 +1,10 @@
 <!-- Start Scripts -->
-<!--<script src="{{asset "/js/lazy-load.min.js"}}"></script>-->
+<script src="{{asset "/js/lazy-load.min.js"}}"></script>
 <script async src="{{asset "dist/global.js"}}"></script>
 <script src="{{asset "js/includes/content-api.min.js"}}"></script>
-<!--
-<script data-search-pseudo-elements defer src="https://pro.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-I3Hhe9TkmlsxzooTtbRzdeLbmkFQE9DVzX/19uTZfHk1zn/uWUyk+a+GyrHyseSq" crossorigin="anonymous"></script>
--->
+<script src="{{asset "js/includes/ghost-search.min.js"}}"></script>
 <noscript id="deferred-styles">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-6jHF7Z3XI3fF4XZixAuSu0gGKrXwoX/w3uFPxC56OtjChio7wtTGJWRW53Nhx6Ev" crossorigin="anonymous">
-  <script src="{{asset "js/includes/ghost-search.min.js"}}"></script>
 </noscript>
 <script>
 var lazyLoadInstance = new LazyLoad({
