--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -36,5 +36,8 @@ var lazyLoadInstance = new LazyLoad({
     <script src="{{asset "js/includes/gh-profile-card.min.js"}}"></script>
     <script async src="{{asset "dist/author.js"}}"></script>
 {{/is}}
+{{#has slug="series-template"}}
+    <script async src="{{asset "/dist/series.js"}}"></script>
+{{/has}}
 
 <!-- End Scripts -->
