fixed series page

--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -12,7 +12,7 @@ var lazyLoadInstance = new LazyLoad({
     // ... more custom settings?
 });
 </script>
-<script src="{{asset "/js/includes/retina.min.js"}}"></script>
+<script async src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@11.0.3/dist/lazyload.min.js"></script>
 <script>
      var loadDeferredStyles = function() {
        var addStylesNode = document.getElementById("deferred-styles");
